# ChangeLog for sci-mathematics/koctave
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/koctave/ChangeLog,v 1.15 2009/09/23 20:10:55 patrick Exp $

  14 Nov 2009; Jonathan Callen <abcd@gentoo.org> koctave-0.65-r1.ebuild:
  Remove monolithic deps

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> koctave-0.65-r1.ebuild:
  Remove virtual/libc

  12 Oct 2008; Markus Dittrich <markusle@gentoo.org> koctave-0.65-r1.ebuild:
  Added slot dependencies for kde-3.5 to make sure we don't pull in kde-4.

  15 Jul 2008; Markus Dittrich <markusle@gentoo.org>
  +files/koctave-0.65-desktop-entry-fix.patch, koctave-0.65-r1.ebuild:
  Fixed broken desktop entry and some cleanup (see bug #207893).

  19 Aug 2007; Markus Dittrich <markusle@gentoo.org> koctave-0.65-r1.ebuild:
  Fixed broken RDEPEND (see bug #189251).

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  27 Nov 2005; Marcus D. Hanwell <cryos@gentoo.org> koctave-0.65-r1.ebuild:
  Added runtime dependency on konsole or kdebase, closes bug 112620.

  28 Aug 2005; Marcus D. Hanwell <cryos@gentoo.org> koctave-0.65-r1.ebuild:
  Stable on amd64.

  20 Aug 2005; Olivier Fisette <ribosome@gentoo.org> -koctave-0.65.ebuild,
  koctave-0.65-r1.ebuild:
  Changed dependency from kdebase to kdelibs (see bug #83058). Added to x86.
  Removed old version.

*koctave-0.65-r1 (05 Jun 2005)

  05 Jun 2005; Olivier Fisette <ribosome@gentoo.org>
  +koctave-0.65-r1.ebuild:
  Workaround for bug #43843. Adds documentation.

  31 May 2005; Marcus D. Hanwell <cryos@gentoo.org> koctave-0.65.ebuild:
  Update homepage and download locations.

  24 Apr 2005; Jason Wever <weeve@gentoo.org> koctave-0.65.ebuild:
  Added ~sparc keyword.

  24 Feb 2005; Marcus D. Hanwell <cryos@gentoo.org>
  +files/koctave-0.65-arts-configure.patch, koctave-0.65.ebuild:
  Patched configure conditionally to allow compilation without arts. Fixes bug
  80980.
