@@ -1,7 +1,9 @@
 AUX koctave-0.65-arts-configure.patch 3569 RMD160 3054b0db98d50a60991dfa7d8112bbf563cae761 SHA1 f98f52cd9f6ac0e29eb9abfe0c06f6aa847142c2 SHA256 d1f03fd33bf2c89081b0a0ae17971e7c07b8eaf7c2e5426e68bd039531d284ba
 AUX koctave-0.65-desktop-entry-fix.patch 597 RMD160 922f00defe20bb1e26a095db8517d2fc12b4e62d SHA1 1e81a15f73dbdfbc4b5023b21479b22c80cf23a9 SHA256 47029cdbf44fcd25b8a48ec23e023cd0953c4fa4045de3eaf6b40189b787fc83
+DIST koctave-0.70.tar.gz 767705 RMD160 efcd4ec67459836f9b3d1d694e9ece780d558082 SHA1 05c62a0e0e33c373e8c39a783521e6a74d529fcd SHA256 54400bf040c22b5924e530e1a4a028db9103618069a4a1564bd157c6c9c060d1
 DIST koctave-docs-20050605.tar.bz2 385432 RMD160 0911cdd83db38bfa6c1db053ce872790f35dca74 SHA1 da1e4b5b0e68e6135f35572d5bd3af71ce16b3e2 SHA256 41731caf2b15d9bd410281a0f77b9e63cd005bca80342885b1cb7fd24468866d
 DIST koctave3-0.65.tar.bz2 928143 RMD160 9487a14586eed18a12cb608538be3d2d38512a72 SHA1 f547958a56848e81ddaa0ef6e0630754b33f5574 SHA256 014e7e98274c84412d4ce4942daca6cab2b0e26b3fc7aa86d00bded58f5a77d1
 EBUILD koctave-0.65-r1.ebuild 866 RMD160 68b5e27d850a82c5f99cb21f392e452664cbe049 SHA1 78393e4de1245d062d694ced622adf711c6b78f8 SHA256 781c95003e2d2c6556bf51de34a08837ac7ef8467e1d75f9a0bb4b5c00af4ccf
-MISC ChangeLog 3010 RMD160 4c474c54503d51628213b0fa52f804d166687614 SHA1 ef795ad078cc986171a1217695333881aa814fb4 SHA256 4845d8a803b1d08309537a3a1427fd4f62fb3a144385f8ebdd46302c74ea1f7b
+EBUILD koctave-0.70.ebuild 824 RMD160 c9d102e62a0162a5d9383c72ce984dce382f87f1 SHA1 31b77f334a22801b32800d64f593d32598db0d25 SHA256 a6e07d0765fd2f61cee2ff75b9fc0c3fce03c643676cdb83c0eaa7951221b2e5
+MISC ChangeLog 3137 RMD160 3f512cba65306af3b7e7633bd3ae422747d4c461 SHA1 d228d2aca984249b3aa9be1a8479f693873b490d SHA256 3e28f11d05349e57468355ae78e7c2fcda2752dd454b26469af26426c7c49dda
 MISC metadata.xml 168 RMD160 d98790cf055dc0f820c63d65f485b9dcfa8950f4 SHA1 95c9e4f7368f82053d631bbcd469612c92ca13cb SHA256 c0cc8d6ab9385750af753ddc504299ed90a70b5c4c655f6c77d865917a8829c9
