@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-mathematics/koctave/ChangeLog,v 1.15 2009/09/23 20:10:55 patrick Exp $
 
+  03 Jun 2010; Ladislav Láska <ladislav.laska@gmail.com> +koctave-0.70.ebuild:
+  Version bump.
+
+*koctave-0.70 (03 Jun 2010) 
+
   14 Nov 2009; Jonathan Callen <abcd@gentoo.org> koctave-0.65-r1.ebuild:
   Remove monolithic deps
 
